Add colections patch (#129)
