# dashboard/docs/swagger.yaml
@@ -89,6 +89,9 @@ definitions:
     type: object
   domain.Tag:
     properties:
+      excluded:
+        description: Places with excluded tag wont be shown in swipes
+        type: boolean
       icon:
         type: string
       id:
@@ -261,6 +264,33 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get collections
+      tags:
+      - collections
+    patch:
+      consumes:
+      - application/json
+      description: Patch a collection with same id in the database
+      parameters:
+      - description: Collection data
+        in: body
+        name: collection
+        required: true
+        schema:
+          $ref: '#/definitions/usecase.UpdateCollectionInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Updated collection
+          schema:
+            $ref: '#/definitions/domain.Collection'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Patch a collection
       tags:
       - collections
     post:
